--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
@@ -64,21 +63,7 @@
         <div class="alert alert-icon alert-danger" role="alert" id="error-summery">
            <div id="errors"></div>
         </div>
-
-
-
-        <div class="alert alert-success alert-dismissible" id="alexa-toolbar">
-            <button data-dismiss="alert" class="close"></button>
-            <h4>Alexa Traffic Rank</h4>
-            <p>
-                For proper your must install Alexa Traffic Rank extension first
-            </p>
-            <div class="btn-list">
-                <a href="https://chrome.google.com/webstore/detail/alexa-traffic-rank/cknebhggccemgcnbidipinkifmmegdel?hl=en" class="btn btn-success" type="button" target="_blank">Yes, install</a>
-            </div>
-        </div>
-
-
+        <div id="alexa-toolbar"></div>
         <a href="#" class="btn btn-outline-success">Forgot your API?</a>
         <a href="#" class="btn btn-outline-secondary">Don't have an account?</a>
     </div>
@@ -102,6 +87,3 @@
 <script src="popup.js"></script>
 </body>
 </html>
-
-
-
